test/compile-fail/resolution/type-existence/fn-unknown-struct/top.rhdl
mod X { }

fn a(x: X) {
    let y: Y = Y {};
}
